[FEAT] adjust layouts of multiple modals, and fix minor UI issues and misalignments

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
 .pelcro-prefix-modal-open {
   @apply overflow-hidden;
 }
+
+.pelcro-modal-overlay {
+  backdrop-filter: blur(2px);
+}
